<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4FA5EA"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="5dp"
            android:text="@string/name"
            android:paddingStart="5dp" />

        <TextView
            android:id="@+id/hobby"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="5dp"
            android:text="@string/hobby"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="5dp"
            android:text="@string/city"
            android:paddingStart="5dp" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E91E63"/>

</LinearLayout>